--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetalheActivity.DetalheActivity">
+    tools:context=".presentation.view.activity.DetalheActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tbDetalhe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,12 +17,9 @@
         android:id="@+id/vpDetalhe"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-
         app:layout_constraintTop_toBottomOf="@id/tbDetalhe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
