--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Main.MainActivity">
+    tools:context=".presentation.view.activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
         <Button
             android:id="@+id/btnBotaoPrincipal"
             android:layout_marginTop="35dp"
-            android:layout_marginLeft="55dp"
+            android:layout_gravity="center_horizontal"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:text="Ver detalhes"/>
