--- a/app/src/main/res/layout/fragment_informacoes.xml
+++ b/app/src/main/res/layout/fragment_informacoes.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="FragmentsInformacoes.FragmentInformacoes"
+    tools:context=".presentation.view.fragment.FragmentInformacoes"
     >
 
 
